--- a/Depo/Depo_LifeTech copy-Info.plist
+++ b/Depo/Depo_LifeTech copy-Info.plist
@@ -115,6 +115,7 @@
 		<string>audio</string>
 		<string>fetch</string>
 		<string>location</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
