--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -40,6 +40,7 @@ def core_pods
 
   pod 'ReachabilitySwift'
   pod 'MBProgressHUD', '~> 1.1.0'
+  pod 'TTGSnackbar'
 
   #logger
   pod 'XCGLogger', '~> 6.0'
