--- a/Depo/Depo/App/Depo-Enterprise-Info.plist
+++ b/Depo/Depo/App/Depo-Enterprise-Info.plist
@@ -59,6 +59,8 @@
 	<string>531658366898592</string>
 	<key>FacebookDisplayName</key>
 	<string>lifebox</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>spotify</string>
@@ -96,8 +98,6 @@
 	<true/>
 	<key>MenloPushServerURL</key>
 	<string>https://turkcell.menloworks.com</string>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -179,6 +179,7 @@
 		<string>audio</string>
 		<string>fetch</string>
 		<string>location</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
@@ -201,6 +202,8 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 	<key>UTExportedTypeDeclarations</key>
@@ -225,7 +228,5 @@
 			</dict>
 		</dict>
 	</array>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
 </dict>
 </plist>
