--- a/Depo/Depo/App/googleAnalytics/LifeboxPlists/debug_iOS/GoogleService-Info-debug.plist
+++ b/Depo/Depo/App/googleAnalytics/LifeboxPlists/debug_iOS/GoogleService-Info-debug.plist
@@ -2,39 +2,35 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-	<string>ca-app-pub-3940256099942544/2934735716</string>
-	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>478809172824-85ua9iuf16plc2utshhskefhq9ctuobl.apps.googleusercontent.com</string>
+	<string>805163098188-b1bse5ap47e7batgktl0kmd58156qe5u.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.478809172824-85ua9iuf16plc2utshhskefhq9ctuobl</string>
+	<string>com.googleusercontent.apps.805163098188-b1bse5ap47e7batgktl0kmd58156qe5u</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCG6NyEWkCyJhdDgzwBGC7nUzS_Mq867wk</string>
+	<string>AIzaSyBEu3zhROMpu0_BM4FMNtx7FeioHzMdNr4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>478809172824</string>
+	<string>805163098188</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>by.come.life.Lifebox</string>
 	<key>PROJECT_ID</key>
-	<string>lifetest-2</string>
+	<string>lifeboxlifetech</string>
 	<key>STORAGE_BUCKET</key>
-	<string>lifetest-2.appspot.com</string>
+	<string>lifeboxlifetech.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
 	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
 	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:478809172824:ios:20d0afcaba45be80</string>
+	<string>1:805163098188:ios:80d4ad2ac5355c36b394e9</string>
 	<key>DATABASE_URL</key>
-	<string>https://lifetest-2.firebaseio.com</string>
+	<string>https://lifeboxlifetech.firebaseio.com</string>
 </dict>
 </plist>
