--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -69,6 +69,7 @@ end
 
 target 'LifeTech-LifeboxFileProvider' do
     shared_pods
+    pod 'Netmera'
     pod 'MMWormhole', '~> 2.0.0'
 end
 
@@ -101,6 +102,7 @@ target 'LifeboxShared' do
 end
 
 target 'LifeboxFileProvider' do
+    pod 'Netmera'
     shared_pods
     pod 'MMWormhole', '~> 2.0.0'
 end
@@ -138,6 +140,7 @@ target 'LifeDriveShared' do
 end
 
 target 'LifeDriveFileProvider' do
+    pod 'Netmera'
     shared_pods
     pod 'MMWormhole', '~> 2.0.0'
 end
@@ -167,6 +170,7 @@ target 'LifeTech_LifeDriveShared' do
 end
 
 target 'LifeTech_LifeDriveFileProvider' do
+    pod 'Netmera'
     shared_pods
     pod 'MMWormhole', '~> 2.0.0'
 end
