--- a/Depo/LifeboxFileProvider/LifeboxFileProvider-appstore.entitlements
+++ b/Depo/LifeboxFileProvider/LifeboxFileProvider-appstore.entitlements
@@ -4,6 +4,7 @@
 <dict>
 	<key>keychain-access-groups</key>
 	<array>
+		<string>7YZS5NTGYH.com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
