--- a/Depo/NotificationService/Lifebox/NotificationService-appstore.entitlements
+++ b/Depo/NotificationService/Lifebox/NotificationService-appstore.entitlements
@@ -10,6 +10,7 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
+		<string>7YZS5NTGYH.com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
