--- a/Depo/autosync-widget/autosync-widget-enterprise.entitlements
+++ b/Depo/autosync-widget/autosync-widget-enterprise.entitlements
@@ -5,6 +5,7 @@
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
+		<string>7YZS5NTGYH.com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
 	</array>
