scheme + target + jenkins lifedrive rename to Billo

--- a/Depo/Depo.xcodeproj/xcshareddata/xcschemes/LifeDrive-widget.xcscheme
+++ b/Depo/Depo.xcodeproj/xcshareddata/xcschemes/LifeDrive-widget.xcscheme
@@ -16,8 +16,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8C3BA2BC22B3CC32006D901E"
-               BuildableName = "LifeDrive-widget.appex"
-               BlueprintName = "LifeDrive-widget"
+               BuildableName = "Billo-widget.appex"
+               BlueprintName = "Billo-widget"
                ReferencedContainer = "container:Depo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -30,8 +30,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "CE7847EC22A685FB00662219"
-               BuildableName = "lifedrive.app"
-               BlueprintName = "lifedrive"
+               BuildableName = "Billo.app"
+               BlueprintName = "Billo"
                ReferencedContainer = "container:Depo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,8 +46,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8C3BA2BC22B3CC32006D901E"
-            BuildableName = "LifeDrive-widget.appex"
-            BlueprintName = "LifeDrive-widget"
+            BuildableName = "Billo-widget.appex"
+            BlueprintName = "Billo-widget"
             ReferencedContainer = "container:Depo.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -71,8 +71,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "CE7847EC22A685FB00662219"
-            BuildableName = "lifedrive.app"
-            BlueprintName = "lifedrive"
+            BuildableName = "Billo.app"
+            BlueprintName = "Billo"
             ReferencedContainer = "container:Depo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -89,8 +89,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "CE7847EC22A685FB00662219"
-            BuildableName = "lifedrive.app"
-            BlueprintName = "lifedrive"
+            BuildableName = "Billo.app"
+            BlueprintName = "Billo"
             ReferencedContainer = "container:Depo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
