--- a/Depo/Depo.xcodeproj/xcshareddata/xcschemes/LifeTech_LifeDriveShared.xcscheme
+++ b/Depo/Depo.xcodeproj/xcshareddata/xcschemes/LifeTech_LifeDriveShared.xcscheme
@@ -16,8 +16,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "0303A7FF2397D12100907F42"
-               BuildableName = "LifeTech_LifeDriveShared.appex"
-               BlueprintName = "LifeTech_LifeDriveShared"
+               BuildableName = "LifeTech_BilloShared.appex"
+               BlueprintName = "LifeTech_BilloShared"
                ReferencedContainer = "container:Depo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -30,8 +30,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "0303A0132397D0D000907F42"
-               BuildableName = "LifeTech_lifedrive.app"
-               BlueprintName = "LifeTech_lifedrive"
+               BuildableName = "LifeTech_Billo.app"
+               BlueprintName = "LifeTech_Billo"
                ReferencedContainer = "container:Depo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -62,8 +62,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0303A0132397D0D000907F42"
-            BuildableName = "LifeTech_lifedrive.app"
-            BlueprintName = "LifeTech_lifedrive"
+            BuildableName = "LifeTech_Billo.app"
+            BlueprintName = "LifeTech_Billo"
             ReferencedContainer = "container:Depo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -80,8 +80,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0303A0132397D0D000907F42"
-            BuildableName = "LifeTech_lifedrive.app"
-            BlueprintName = "LifeTech_lifedrive"
+            BuildableName = "LifeTech_Billo.app"
+            BlueprintName = "LifeTech_Billo"
             ReferencedContainer = "container:Depo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
