--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -41,7 +41,7 @@ def core_pods
   pod 'ReachabilitySwift'
   pod 'MBProgressHUD', '~> 1.1.0'
   pod 'TTGSnackbar', '~> 1'
-
+  pod 'MaterialComponents/Slider'
   #logger
   pod 'XCGLogger', '~> 7'
 
