--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -52,7 +52,7 @@ def core_pods
   pod 'SQLite.swift', '0.11.4'
   
   pod 'Mantis', '~> 1.3.2'
-#  pod 'MetalPetal', '~> 1.0'
+  pod 'MetalPetal/Swift'
 #  pod 'GPUImage'
 
   pod 'SwiftyGif', '~> 5'
