--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -11,8 +11,8 @@ end
 
 def core_pods
   shared_pods
-  pod 'Fabric', '~> 1.10'
-  pod 'Crashlytics', '3.14.0'
+  pod 'Firebase/Crashlytics', '~> 6.30.0'
+  pod 'Firebase/Analytics', '~> 6.30.0'
   pod 'FBSDKCoreKit', '~> 7'
   pod 'FBSDKLoginKit', '~> 7'
   pod 'FBSDKShareKit', '~> 7'
