Implemented new iOS 14 widget with 0-2 and 5-7 rules

--- a/Depo/Depo/App/Depo_LifeTech-Info.plist
+++ b/Depo/Depo/App/Depo_LifeTech-Info.plist
@@ -35,6 +35,8 @@
 				<string>db-422fptod5dlxrn8</string>
 				<string>akillidepo</string>
 				<string>fb531658366898592</string>
+				<string>lifeboxapp
+</string>
 			</array>
 		</dict>
 	</array>
