--- a/Depo/Depo/App/googleAnalytics/LifedrivePlists/Store_iOS/GoogleService-Info.plist
+++ b/Depo/Depo/App/googleAnalytics/LifedrivePlists/Store_iOS/GoogleService-Info.plist
@@ -3,9 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>487629516002-f089vnlddb2cfo717mr0n5u92rb2con8.apps.googleusercontent.com</string>
+	<string>487629516002-t1tii6tsat259ug6q73c5ncerh768t6h.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.487629516002-f089vnlddb2cfo717mr0n5u92rb2con8</string>
+	<string>com.googleusercontent.apps.487629516002-t1tii6tsat259ug6q73c5ncerh768t6h</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>487629516002-ms8vfvnsgdqej2vokmb6i7c1hj0d9acb.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyC41TzDfPooz9tCrpW3sAZOtsP_Cafj2GI</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.turkcell.lifedrive</string>
+	<string>com.lcv.billo</string>
 	<key>PROJECT_ID</key>
 	<string>lifedrive-29c7f</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:487629516002:ios:8f2c797cedbf919c</string>
+	<string>1:487629516002:ios:1d0bcab4cedeba0774c2bb</string>
 	<key>DATABASE_URL</key>
 	<string>https://lifedrive-29c7f.firebaseio.com</string>
 </dict>
