podfile: new widget targets

--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -108,9 +108,9 @@ target 'LifeTech-LifeboxFileProviderUI' do
   file_provider_ui_pods
 end
 
-#target 'LifeTech-autosync-widget' do
-#  autosync_widget_pods
-#end
+target 'LifeTech-LifeboxWidgetExtension' do
+  widget_pods
+end
 
 target "LifeTech-NotificationService" do
   notification_pods
@@ -176,6 +176,10 @@ end
 #  autosync_widget_pods
 #end
 
+target 'BilloWidgetExtension' do
+  widget_pods
+end
+
 target 'BilloNotificationService' do
   notification_pods
 end
@@ -199,6 +203,10 @@ end
 #target 'LifeTech_Billo-widget' do
 #  autosync_widget_pods
 #end
+
+target 'LifeTech_BilloWidgetExtension' do
+  widget_pods
+end
 
 target 'LifeTech_BilloNotificationService' do
   notification_pods
