--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -90,6 +90,7 @@ def widget_pods
   shared_pods
   pod 'SDWebImage', '~> 4'
   pod 'MMWormhole', '~> 2.0.0'
+  pod 'XCGLogger', '~> 7'
 end
 
 target 'Depo_LifeTech' do
