--- a/Depo/LifeboxWidget/LifeboxTC/Info-AppStore.plist
+++ b/Depo/LifeboxWidget/LifeboxTC/Info-AppStore.plist
@@ -10,8 +10,6 @@
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.turkcell.akillidepo.todayextension</string>
-	<key>GroupBundleId</key>
-	<string>group.com.turkcell.akillidepo</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -22,11 +20,6 @@
 	<string>20.142</string>
 	<key>CFBundleVersion</key>
 	<string>2.35</string>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<false/>
-	</dict>
 	<key>UIAppFonts</key>
 	<array>
 		<string>TurkcellSaturaReg.ttf</string>
@@ -40,10 +33,8 @@
 	</array>
 	<key>NSExtension</key>
 	<dict>
-		<key>NSExtensionMainStoryboard</key>
-		<string>MainInterface</string>
 		<key>NSExtensionPointIdentifier</key>
-		<string>com.apple.widget-extension</string>
+		<string>сom.apple.widgetkit-extension</string>
 	</dict>
 </dict>
 </plist>
