--- a/Depo/LifeboxWidget/Billo/Info.plist
+++ b/Depo/LifeboxWidget/Billo/Info.plist
@@ -23,7 +23,7 @@
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionPointIdentifier</key>
-		<string>сom.apple.widgetkit-extension</string>
+		<string>com.apple.widgetkit-extension</string>
 	</dict>
 	<key>UIAppFonts</key>
 	<array>
