--- a/Depo/LifeboxWidget/LifeboxTC/Info-AppStore.plist
+++ b/Depo/LifeboxWidget/LifeboxTC/Info-AppStore.plist
@@ -34,7 +34,7 @@
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionPointIdentifier</key>
-		<string>сom.apple.widgetkit-extension</string>
+		<string>com.apple.widgetkit-extension</string>
 	</dict>
 </dict>
 </plist>
