--- a/Depo/Depo/App/Depo-AppStore.entitlements
+++ b/Depo/Depo/App/Depo-AppStore.entitlements
@@ -17,6 +17,9 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:ld9m.adj.st</string>
+		<string>applinks:tcloudstb.turkcell.com.tr</string>
+		<string>applinks:adepotest.turkcell.com.tr</string>
+		<string>applinks:mylifebox.com</string>
 	</array>
 </dict>
 </plist>
