--- a/Depo/Depo/App/Depo_LifeTech.entitlements
+++ b/Depo/Depo/App/Depo_LifeTech.entitlements
@@ -7,6 +7,9 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:ld9m.adj.st</string>
+		<string>applinks:tcloudstb.turkcell.com.tr</string>
+		<string>applinks:adepotest.turkcell.com.tr</string>
+		<string>applinks:mylifebox.com</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
