--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -154,6 +154,30 @@ target 'LifeboxUnitTests' do
   core_pods
 end
 
+target 'lifeBox_Business' do
+  core_pods
+end
+
+target 'lifeBox_Business_Bundle' do
+  core_pods
+end
+
+target 'lifeBox_Business_Shared' do
+  sharing_pods
+end
+
+target 'lifeBox_Business_FileProvider' do
+  file_provider_pods
+end
+
+target 'lifeBox_Business_FileProviderUI' do
+  file_provider_ui_pods
+end
+
+target "lifeBox_Business_NotificationService" do
+  notification_pods
+end
+
 target 'Billo' do
   core_pods
 end
