--- a/Depo/LifeBox_Business/Signing/Turkcell/LifeBox_Business-AppStore.entitlements
+++ b/Depo/LifeBox_Business/Signing/Turkcell/LifeBox_Business-AppStore.entitlements
@@ -6,13 +6,13 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.turkcell.akillidepo</string>
+		<string>group.com.turkcell.lifebox.business</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
-		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
-		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
+		<string>$(AppIdentifierPrefix)com.turkcell.lifebox.business</string>
+		<string>$(AppIdentifierPrefix)com.turkcell.lifebox.business.ent</string>
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
