new shared constants + changed. jenkins file

--- a/Depo/LifeboxFileProviderUI/LifeBox_Business/InfoAppStore.plist
+++ b/Depo/LifeboxFileProviderUI/LifeBox_Business/InfoAppStore.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.turkcell.akillidepo.filesui</string>
+	<string>com.turkcell.lifebox.business.filesUI</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -23,7 +23,7 @@
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionFileProviderDocumentGroup</key>
-		<string>group.com.turkcell.akillidepo</string>
+		<string>group.com.turkcell.lifebox.business</string>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
 		<key>NSExtensionPointIdentifier</key>
