--- a/Depo/LifeboxFileProvider/LifeBox_Business/InfoAppStore.plist
+++ b/Depo/LifeboxFileProvider/LifeBox_Business/InfoAppStore.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.turkcell.akillidepo.files</string>
+	<string>com.turkcell.lifebox.business.file</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -23,7 +23,7 @@
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionFileProviderDocumentGroup</key>
-		<string>group.com.turkcell.akillidepo</string>
+		<string>group.com.turkcell.lifebox.business</string>
 		<key>NSExtensionFileProviderSupportsEnumeration</key>
 		<true/>
 		<key>NSExtensionPointIdentifier</key>
