new icons + new name + version up

--- a/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
@@ -10,7 +10,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>lifebox</string>
+	<string>Lifebox Business</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
@@ -39,7 +39,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>3</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -63,7 +63,7 @@
 	<key>FacebookAppID</key>
 	<string>531658366898592</string>
 	<key>FacebookDisplayName</key>
-	<string>lifebox</string>
+	<string>Lifebox Business</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSApplicationQueriesSchemes</key>
