COF-858 Lifebox Business - App open URL and removal of some deeplinks

--- a/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech-Info.plist
@@ -33,9 +33,8 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>db-422fptod5dlxrn8</string>
-				<string>akillidepo</string>
 				<string>fb531658366898592</string>
-				<string>lifeboxapp
+				<string>lifeboxbusiness
 </string>
 			</array>
 		</dict>
