--- a/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech.entitlements
+++ b/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech.entitlements
@@ -13,13 +13,10 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.come.life.Lifebox</string>
+		<string>group.by.com.life.LifeboxBusiness.group</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
-		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
-		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
 		<string>$(AppIdentifierPrefix)by.come.life.Lifebox.LifeboxWidget</string>
 	</array>
 </dict>
