--- a/Depo/LifeBox_Business/Signing/Turkcell/LifeBox_Business-AppStore.entitlements
+++ b/Depo/LifeBox_Business/Signing/Turkcell/LifeBox_Business-AppStore.entitlements
@@ -14,9 +14,9 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.lifebox.business</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.lifebox.business.ent</string>
+		<string>$(AppIdentifierPrefix)by.com.life.LifeboxBusiness</string>
 	</array>
 </dict>
 </plist>
