--- a/Depo/LifeboxFileProviderUI/LifeBox_Business/LifeboxFileProviderUI.entitlements
+++ b/Depo/LifeboxFileProviderUI/LifeBox_Business/LifeboxFileProviderUI.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.come.life.Lifebox</string>
+		<string>group.by.com.life.LifeboxBusiness.group</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
