--- a/Depo/LifeboxShared/LifeBox_Business/LifeboxShared.entitlements
+++ b/Depo/LifeboxShared/LifeBox_Business/LifeboxShared.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.turkcell.lifebox.business</string>
+		<string>group.by.com.life.LifeboxBusiness.group</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
