--- a/Depo/NotificationService/LifeBox_Business/NotificationService.entitlements
+++ b/Depo/NotificationService/LifeBox_Business/NotificationService.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.come.life.Lifebox</string>
+		<string>group.by.com.life.LifeboxBusiness.group</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
